openshift/demo_setup_memory_bad.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "13"
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"quarkus-quickstart:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"quarkus-quickstart\")].image"}]'
    generation: 13
    labels:
      app: quarkus-quickstart
      app.kubernetes.io/component: quarkus-quickstart
      app.kubernetes.io/instance: quarkus-quickstart
    name: quarkus-quickstart
    resourceVersion: "263224"
    uid: 80fadeb8-b0f4-4781-87e7-c62e4b454ff4
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        deployment: quarkus-quickstart
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
        creationTimestamp: null
        labels:
          deployment: quarkus-quickstart
      spec:
        containers:
        - image: image-registry.openshift-image-registry.svc:5000/java-container-demo/quarkus-quickstart:latest
          imagePullPolicy: IfNotPresent
          name: quarkus-quickstart
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources:
            limits:
              cpu: 1500m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 500Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
    labels:
      app: quarkus-quickstart
      app.kubernetes.io/component: quarkus-quickstart
      app.kubernetes.io/instance: quarkus-quickstart
    name: quarkus-quickstart
    resourceVersion: "32594"
    uid: 7eceb788-2455-4a49-987a-37b6adfa4fea
  spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      deployment: quarkus-quickstart
    sessionAffinity: None
    type: ClusterIP
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: quarkus-quickstart
      app.kubernetes.io/component: quarkus-quickstart
      app.kubernetes.io/instance: quarkus-quickstart
    name: quarkus-quickstart
    resourceVersion: "33042"
    uid: 824fd67d-5b10-43bf-9907-c184ae5429c1
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: quarkus-quickstart
      weight: 100
    wildcardPolicy: None
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    generation: 14
    labels:
      app: quarkus-quickstart
      app.kubernetes.io/component: quarkus-quickstart
      app.kubernetes.io/instance: quarkus-quickstart
    name: openjdk-17
    resourceVersion: "262394"
    uid: 7e53ac06-139d-4774-b73b-91be8ee5365c
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: registry.access.redhat.com/ubi9/openjdk-17
      from:
        kind: DockerImage
        name: registry.access.redhat.com/ubi9/openjdk-17
      generation: 14
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    generation: 1
    labels:
      app: quarkus-quickstart
      app.kubernetes.io/component: quarkus-quickstart
      app.kubernetes.io/instance: quarkus-quickstart
    name: quarkus-quickstart
    resourceVersion: "262609"
    uid: 3ecec299-25be-4510-917e-91d93460d0d0
  spec:
    lookupPolicy:
      local: false
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    generation: 11
    labels:
      app: quarkus-quickstart
      app.kubernetes.io/component: quarkus-quickstart
      app.kubernetes.io/instance: quarkus-quickstart
    name: quarkus-quickstart
    resourceVersion: "262395"
    uid: 92eb1b0a-2fff-4c53-b297-bb6fd628dcce
  spec:
    failedBuildsHistoryLimit: 5
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: quarkus-quickstart:latest
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      git:
        ref: "memory-config-bad"
        uri: https://github.com/jerboaa/quarkus-quickstart.git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: openjdk-17:latest
      type: Source
    successfulBuildsHistoryLimit: 5
    triggers:
    - github:
        secret: Z-wfbDyaXeSSgEdCb753
      type: GitHub
    - generic:
        secret: r9Sq6oQJ6TwtLWC17kvr
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
kind: List
