openshift/demo_setup_native.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    generation: 1
    name: quarkus-quickstart-native
    resourceVersion: "307723"
    uid: 534a7a2f-6898-4e7b-a361-2713a7184e2e
  spec:
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      app: quarkus-quickstart-native
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: quarkus-quickstart-native
      spec:
        containers:
        - image: quarkus-quickstart-native:latest 
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /hello
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: quarkus-quickstart-native
          ports:
          - containerPort: 8080
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /hello
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1500m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 500Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - quarkus-quickstart-native
        from:
          kind: ImageStreamTag
          name: quarkus-quickstart-native:latest
      type: ImageChange
    - type: ConfigChange
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    generation: 14
    labels:
      app: quarkus-quickstart-native
    name: quarkus-quickstart-native
    resourceVersion: "262394"
    uid: 7e53ac06-139d-4774-b73b-91be8ee5365c
  spec:
    lookupPolicy:
      local: false
    tags:
    - from:
        kind: DockerImage
        name: quay.io/sgehwolf/quarkus-quickstart-native:1.0
      generation: 1
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: quarkus-quickstart-native
    resourceVersion: "565641"
    uid: 4c90c455-bc6f-4b02-9fb2-12a9474ca4de
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: quarkus-quickstart-native
      weight: 100
    wildcardPolicy: None
- apiVersion: v1
  kind: Service
  metadata:
    name: quarkus-quickstart-native
    resourceVersion: "565575"
    uid: 6932325a-daca-4950-86ea-fba1f3f0cb7b
  spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: quarkus-quickstart-native
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
